--- a/flutter_journal_app/pubspec.yaml
+++ b/flutter_journal_app/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: ^6.2.1
   intl: ^0.20.2
   uuid: ^4.5.1
+  flutter_slidable: ^4.0.0
 
 dev_dependencies:
   flutter_test:
