--- a/flutter_journal_app/pubspec.yaml
+++ b/flutter_journal_app/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   intl: ^0.20.2
   uuid: ^4.5.1
   flutter_slidable: ^4.0.0
+  firebase_auth: ^4.16.0
 
 dev_dependencies:
   flutter_test:
