--- a/flutter_journal_app/pubspec.yaml
+++ b/flutter_journal_app/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   uuid: ^4.5.1
   flutter_slidable: ^4.0.0
   firebase_auth: ^4.16.0
+  cloud_firestore: ^4.17.5
 
 dev_dependencies:
   flutter_test:
