--- a/flutter_journal_app/pubspec.yaml
+++ b/flutter_journal_app/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_slidable: ^4.0.0
   firebase_auth: ^6.0.2
   cloud_firestore: ^6.0.1
+  firebase_remote_config: ^6.0.1
 
 dev_dependencies:
   flutter_test:
