--- a/flutter_journal_app/pubspec.yaml
+++ b/flutter_journal_app/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_auth: ^6.0.2
   cloud_firestore: ^6.0.1
   firebase_remote_config: ^6.0.1
+  firebase_analytics: ^12.0.1
 
 dev_dependencies:
   flutter_test:
